--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 REACT_APP_CANDY_MACHINE_ID=CsqP2JWsRyWm6XJkaLodGUGpNT2DbNPPV3o98BJcLigg
 
 REACT_APP_SOLANA_NETWORK=mainnet-beta
-REACT_APP_SOLANA_RPC_HOST=http://genesysnode1.nodemonkey.io:8899/
+REACT_APP_SOLANA_RPC_HOST=https://ssc-dao.genesysgo.net/
 SKIP_PREFLIGHT_CHECK=true
