--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 REACT_APP_CANDY_MACHINE_ID=CsqP2JWsRyWm6XJkaLodGUGpNT2DbNPPV3o98BJcLigg
 
 REACT_APP_SOLANA_NETWORK=mainnet-beta
-REACT_APP_SOLANA_RPC_HOST=https://ssc-dao.genesysgo.net/
+REACT_APP_SOLANA_RPC_HOST=https://ssc-dao.genesysgo.net/g
 SKIP_PREFLIGHT_CHECK=true
