--- a/package.json
+++ b/package.json
@@ -1,32 +1,28 @@
 {
-  "name": "CMv2-starter",
-  "version": "0.1.0",
+  "name": "candy-machine-mint",
+  "version": "0.2.0",
   "private": true,
   "dependencies": {
-    "@bundlr-network/client": "^0.2.4",
-    "@civic/solana-gateway-react": "^0.4.6",
+    "@babel/runtime": "^7.15.5",
+    "@civic/solana-gateway-react": "^0.7.6",
+    "@identity.com/solana-gateway-ts": "^0.8.2",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
-    "@project-serum/anchor": "^0.14.0",
+    "@project-serum/anchor": "^0.17.0",
     "@solana/spl-token": "^0.1.8",
     "@solana/wallet-adapter-base": "^0.7.0",
     "@solana/wallet-adapter-material-ui": "^0.13.1",
     "@solana/wallet-adapter-react": "^0.13.1",
     "@solana/wallet-adapter-react-ui": "^0.6.1",
     "@solana/wallet-adapter-wallets": "^0.11.3",
-    "@solana/web3.js": "^1.31.0",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
+    "@solana/web3.js": "^1.33.0",
     "mime": "^3.0.0",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-countdown": "^2.3.2",
     "react-dom": "^17.0.2",
+    "react-is": "^16.8.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.1",
     "typescript": "^4.1.2",
@@ -59,7 +55,14 @@
     ]
   },
   "devDependencies": {
-    "@types/mime": "^2.0.3",
-    "@types/styled-components": "^5.1.14"
+    "@types/styled-components": "^5.1.14",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^12.0.0",
+    "@types/react": "^17.0.0",
+    "@testing-library/dom": "^7.21.4",
+    "@types/react-dom": "^17.0.0"
   }
 }
